...
                fontSize = 52.sp,
                fontWeight = FontWeight.Bold,
                lineHeight = 52.sp
            )
            Spacer(Modifier.width(8.dp))
            Text(
                text = "TOTAL DE LPS",
                color = ColorTextHint,
                fontSize = 12.sp,
                fontWeight = FontWeight.Medium,
                letterSpacing = 1.sp,
                modifier = Modifier.padding(bottom = 10.dp)
            )
...
